Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126268

Text rendering does not handle fill and stroke opacities correctly

XMLWordPrintable

    • bdc910e34 (dev), fa1e9323d (6.9), 6ba212425 (tqtc/lts-6.8), f07e62262 (dev), 477bf7647 (6.10), 79a0e0014 (dev)

      The fill and stroke operations opacities are handled by two properties, "fill-opacity" and "stroke-opacity". In case of <text> element, QSvgRenderer does not handle it correctly. "fill-opacity" is set as a global opacity on QPainter using QPainter::setOpacity, and "stroke-opacity" is ignored completely.

        For Gerrit Dashboard: QTBUG-126268
        # Subject Branch Project Status CR V

            rlohning Robert Löhning
            hatemelkharashy Hatem ElKharashy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes